fix spacing programming section

--- a/components/home/languange.module.css
+++ b/components/home/languange.module.css
@@ -80,6 +80,11 @@
 
 /* Mobile */
 @media only screen and (max-width: 768px) {
+  .main h1 {
+    padding: 0 5%;
+    margin: 0 5%;
+  }
+
   .cards {
     grid-gap: 0.5rem;
     min-height: 50px;
@@ -87,7 +92,8 @@
   }
 
   .marqIcon {
-    margin: 30px 15px;
+    margin: 30px 5%;
+    padding: 0 5%;
   }
 
   .marqIcon i {
